--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,6 +8,12 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
+	position: fixed;
+	top: 0;
+	width: var(--container-width-lg);
+	background: var(--color-bg);
+	z-index: 2;
+	padding-top: 25px;
 }
 
 /* ========= HEADER INTRO  ========= */
@@ -78,12 +84,17 @@
 	justify-content: space-between;
 	position: absolute;
 	width: var(--container-width-lg);
+	padding-right: 10px;
 	bottom: 20px;
 }
 
 /* ========= MEDIA QUERIES  ========= */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	.header-sidebar-info {
+		width: var(--container-width-md);
+	}
+
+	.header-topbar {
 		width: var(--container-width-md);
 	}
 }
@@ -103,5 +114,9 @@
 
 	.header-profile {
 		width: 250px;
+	}
+
+	.header-topbar {
+		width: var(--container-width-sm);
 	}
 }
