--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,12 @@ html {
 /* ==================== GENERAL STYLES ==================== */
 .container {
 	width: var(--container-width-lg);
-	margin: 20px auto;
-	height: 100vh;
+	margin: 10px auto;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	border: 1px solid red;
 }
 
 h1,
@@ -61,6 +62,9 @@ h5 {
 	font-weight: 500;
 }
 
+.section-header {
+	padding-bottom: 40px;
+}
 .section-header > h2,
 .section-header > h5 {
 	text-align: center;
@@ -144,11 +148,13 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	.container {
 		width: var(--container-width-md);
+		padding: 0 0 40px 0;
 	}
 }
 
 @media screen and (max-width: 767px) {
 	.container {
 		width: var(--container-width-sm);
+		padding: 0 0 40px 0;
 	}
 }
