--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -9,10 +9,9 @@
 	background: var(--color-bg-light);
 	border-radius: 20px;
 	padding: 30px;
-}
-
-.skills-title {
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .skills-list {
@@ -32,4 +31,20 @@
 }
 .skills-item-icon {
 	color: var(--color-primary);
+}
+
+/* ========= MEDIA QUERIES  ========= */
+@media screen and (min-width: 601px) and (max-width: 1023px) {
+	.skills-container {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.skills-container {
+		display: grid;
+		grid-template-columns: 1fr;
+		gap: 25px;
+		/* border: 1px solid red; */
+	}
 }
