--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,20 +1,15 @@
-.container {
-	min-height: 0vh;
-	margin: 0;
-}
 .contact-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	min-height: 100vh;
-	padding-top: 40px;
-	position: relative;
+	justify-content: center;
+	height: fit-content;
+	height: 100vh;
 }
 
-.contact-container > h4 {
+.contact-description {
 	font-weight: 200;
-	width: 450px;
-	font-size: 18px;
+	font-size: 17px;
 	text-align: center;
-	padding-bottom: 40px;
+	padding: 40px 5px;
 }
