--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,7 +8,10 @@
 	justify-content: space-between;
 	align-items: baseline;
 	width: 100%;
-	background: var(--color-bg);
+}
+
+.theme-toggle {
+	cursor: pointer;
 }
 
 /* ========= HEADER INTRO  ========= */
