--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,21 @@
 body {
 	font-family: "Poppins", sans-serif;
 	background: var(--color-bg);
-	color: #fff;
+	color: var(--color-text-color);
 	line-height: 1.7;
+	transition: var(--transition);
 }
 
 :root {
+	/* FOR SCREEN SIZE */
+	--container-width-lg: 75%;
+	--container-width-md: 86%;
+	--container-width-sm: 90%;
+
+	--transition: all 500ms ease;
+}
+
+.dark-theme {
 	--color-bg: #0a0f1e;
 	--color-bg-light: #141c25;
 	--color-primary: #34ace0;
@@ -23,13 +33,17 @@ body {
 
 	/* HOVER COLOUR */
 	--color-primary-hover: #57b3da;
+}
 
-	/* FOR SCREEN SIZE */
-	--container-width-lg: 75%;
-	--container-width-md: 86%;
-	--container-width-sm: 90%;
+.light-theme {
+	--color-bg: #f5f6fa;
+	--color-bg-light: #dcdde1;
+	--color-primary: #34ace0;
+	--color-secondary: #576574;
+	--color-text-color: #222f3e;
 
-	--transition: all 500ms ease;
+	/* HOVER COLOUR */
+	--color-primary-hover: #57b3da;
 }
 
 html {
@@ -51,7 +65,7 @@ html {
 
 .scroll-to-top {
 	cursor: pointer;
-	color: white;
+	color: var(--color-text-color);
 	font-size: 14px;
 	font-weight: 200;
 }
@@ -63,7 +77,7 @@ html {
 }
 
 .footer-links > a {
-	color: white;
+	color: var(--color-text-color);
 	transition: ease 0.2s;
 }
 
