Show more projects button added

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -162,6 +162,11 @@
 	border-top: 0;
 }
 
+.show-projects {
+	margin: auto;
+	margin-top: 75px;
+}
+
 /* MEDIA QUERIES */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	.project-card-container {
