--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,5 +1,14 @@
 .header-container {
 	text-align: center;
+	display: flex;
+	flex-flow: column;
+	justify-content: space-between;
+	flex: 1;
+	width: 100%;
+}
+
+#home {
+	justify-content: flex-start;
 }
 
 /* ========= TOP BAR ========= */
@@ -22,6 +31,7 @@
 	align-items: center;
 	margin-bottom: 20px;
 	margin-top: 40px;
+	flex: 1;
 }
 
 /* ========= DONWLOAD RESUME AND ABOUT ME BUTTONS  ========= */
@@ -29,6 +39,7 @@
 	display: flex;
 	justify-content: center;
 	gap: 20px;
+	margin-top: 40px;
 }
 
 /* ========= PROFILE PICTURE  ========= */
@@ -80,10 +91,8 @@
 .header-sidebar-info {
 	display: flex;
 	justify-content: space-between;
-	position: absolute;
-	width: var(--container-width-lg);
 	padding-right: 10px;
-	bottom: 20px;
+	min-width: 100%;
 }
 
 /* ========= MEDIA QUERIES  ========= */
