--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,9 +1,30 @@
+.about-me{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 100px;
+}
 .about-container {
 	display: flex;
-	text-align: justify;
-	justify-content: center;
+	justify-content: space-between;
+	align-items: space-between;
+	width: 100%;
+	gap: 50px;
 }
 
+.about-container:nth-of-type(even){
+	flex-wrap: wrap;
+}
+
+
+.about-skills{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	align-items: flex-start;
+	justify-content: flex-start;
+}
 /* ========= ABOUT ME PROFILE  ========= */
 .about-profile img {
 	border-radius: 20px;
@@ -16,13 +37,17 @@
 	font-weight: 200;
 	color: var(--color-text-color);
 	margin-left: 80px;
-	width: 50%;
+	width: 70%;
 }
 
 /* ========= MEDIA QUERIES  ========= */
 @media screen and (max-width: 1023px) {
 	.about-container {
 		flex-direction: column;
+		gap: 50px;
+	}
+
+	.about-me:nth-child(0){
 		justify-content: center;
 		align-items: center;
 	}
